vitrail-pg-macros/tests/ui/fail/delete_in_without_variables.stderr
error: delete filters using `eq(...)`, `in(...)`, or `not(...)` require `#[vitrail(variables = YourVariablesType)]`
  --> tests/ui/fail/delete_in_without_variables.rs:20:8
   |
20 | struct DeleteCommentsByIds;
   |        ^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `DeleteCommentsByIds: vitrail_pg_core::DeleteManyModel` is not satisfied
  --> tests/ui/fail/delete_in_without_variables.rs:23:49
   |
23 |     let _ = crate::delete_schema::delete_many::<DeleteCommentsByIds>();
   |                                                 ^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `vitrail_pg_core::DeleteManyModel` is not implemented for `DeleteCommentsByIds`
  --> tests/ui/fail/delete_in_without_variables.rs:20:1
   |
20 | struct DeleteCommentsByIds;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `delete_many`
  --> tests/ui/fail/delete_in_without_variables.rs:5:1
   |
 5 | / schema! {
 6 | |     name delete_schema
 7 | |
 8 | |     model comment {
...  |
12 | | }
   | |_^ required by this bound in `delete_many`
   = note: this error originates in the macro `schema` (in Nightly builds, run with -Z macro-backtrace for more info)
